--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,11 @@
 ---
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "Home Page";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-		<h1>Kiss my lips, boondogle</h1>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h1>Kiss my lips, boondogle</h1>
+	<h2>Page title is: {pageTitle}</h2>
+	<p>this is blog site</p>
+	<p>you can read <a href="/blog">blog here</a>, also there is <a href="/about">about page here</a></p>
+	<p>that is it, you dont like it go do something else boondogle</p>
+</BaseLayout>
